--- a/style.css
+++ b/style.css
@@ -1,26 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,100&family=Bebas+Neue&family=Quicksand:wght@300&family=Rajdhani&family=Yanone+Kaffeesatz:wght@300&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+
+body {
+
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Rajdhani', sans-serif;
+}
+
 .container {
     display: flex;
 }
-.atajo img {
-    max-height: 60px;
+h1 {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
 }
-.atajo {
-    position: fixed;
-}
-.contenido {
-    background-color: black;
-    color: white;
-    width: 100%;
-    margin-left: 20%;
-}
-.github {
-    color:white;
-}
-.linkedin {
-    color: white;
+h3 {
+    font-family: 'Rajdhani', sans-serif;
 }
