--- a/presentacion.css
+++ b/presentacion.css
@@ -5,8 +5,8 @@
     margin-left: 20%;
 }
 .nombre {
-    margin-top: 20%;
     margin-left: 2%;
+    font-size: 100px;
 }
 .bienvenida {
     margin-top: 2%;
@@ -14,6 +14,7 @@
 }
 .mail {
     font-weight: 100;
+    margin-top: 5%;
     margin-left: 2%;
 }
 .descarga {
