--- a/atajo.css
+++ b/atajo.css
@@ -1,9 +1,12 @@
 .atajo img {
-    max-height: 60px;
+    max-height: 150px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
 }
 .atajo {
     position: fixed;
     height: 100%;
-    width: 20%;
-    border: solid;
+    width: 14%;
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(50%,#033947), color-stop(100%,#021d39)); /* Chrome,Safari4+ */
 }
