--- a/presentacion.css
+++ b/presentacion.css
@@ -4,7 +4,7 @@
     width: 100%;
     margin-left: 20%;
 }
-.nombre {
+.titulo {
     margin-left: 2%;
     font-size: 100px;
 }
@@ -25,4 +25,6 @@
     margin-left: 2%;
     font-size: 200%;
 }
-
+.presentacion {
+    margin-bottom: 30%;
+}
